--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,18 @@
 *.lai
 *.la
 *.a
+/GPATH
+/GRTAGS
+/GSYMS
+/GTAGS
+*~
+/a.out
+/dual_buffer.ppm
+/generate.py
+/main
+/naive.ppm
+/out.ppm
+/pre_scan.png
+/single_buffer.ppm
+/test.lst
+/300.png
